kubernetes/Deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: transaction-service
  namespace: banking

spec:
  replicas: 2

  selector:
    matchLabels:
      app: transaction-service

  template:
    metadata:
      labels:
        app: transaction-service

    spec:
      containers:
      - name: transaction-service

        image: nginx

        ports:
        - containerPort: 80
