kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: banking-ingress
  namespace: banking

spec:
  ingressClassName: nginx

  rules:
  - http:
      paths:

      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 5000

      - path: /account
        pathType: Prefix
        backend:
          service:
            name: account-service
            port:
              number: 5001

      - path: /payments
        pathType: Prefix
        backend:
          service:
            name: payment-service
            port:
              number: 5002

      - path: /transactions
        pathType: Prefix
        backend:
          service:
            name: transaction-service
            port:
              number: 5003
